bindings/rust/arkilian/src/bindings.rs

/* automatically generated by rust-bindgen 0.69.5 */

pub const SQLITE_OK: u32 = 0;
pub const SQLITE_ERROR: u32 = 1;
pub const SQLITE_BUSY: u32 = 5;
pub const SQLITE_ROW: u32 = 100;
pub const SQLITE_DONE: u32 = 101;
pub const SQLITE_INTEGER: u32 = 1;
pub const SQLITE_FLOAT: u32 = 2;
pub const SQLITE_TEXT: u32 = 3;
pub const SQLITE_BLOB: u32 = 4;
pub const SQLITE_NULL: u32 = 5;
pub const ARK_HF_BACKUP_ENABLED: u32 = 1;
pub const ARK_HF_DEST_CONFIGURED: u32 = 2;
pub const ARK_HF_FLUSH_ALIVE: u32 = 4;
pub const ARK_HF_SNAPSHOT_ALIVE: u32 = 8;
pub const ARK_HF_QUEUE_BELOW_CAP: u32 = 16;
pub const ARK_HF_SCHEMA_IN_SYNC: u32 = 32;
pub const ARK_HF_NO_DEAD_LETTER: u32 = 64;
pub const ARK_HF_MANIFEST_RESOLVED: u32 = 128;
pub const ARK_HF_NO_CAPTURE_GAP: u32 = 256;
pub const ARK_HF_DURABLE_CAPTURE: u32 = 512;
pub const ARK_HF_ALL_CORE: u32 = 1023;
pub const HYDRATION_OK: u32 = 0;
pub const HYDRATION_ERR_NET: i32 = -1;
pub const HYDRATION_ERR_DISK: i32 = -2;
pub const HYDRATION_ERR_MEM: i32 = -3;
pub const HYDRATION_ERR_PROTO: i32 = -4;
pub const HYDRATION_ERR_SQL: i32 = -5;
pub const HYDRATION_ERR_DECOMP: i32 = -6;
pub const HYDRATION_ERR_EXPIRED: i32 = -7;
pub const HYDRATION_ERR_NOT_FOUND: i32 = -8;
pub const HYDRATION_ERR_NEWER: i32 = -9;
pub const HYDRATION_ERR_BUSY: i32 = -10;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct arkilian {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3 {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct arkilian_s3_config {
    pub endpoint: *const ::std::os::raw::c_char,
    pub region: *const ::std::os::raw::c_char,
    pub bucket: *const ::std::os::raw::c_char,
    pub access_key_id: *const ::std::os::raw::c_char,
    pub secret_access_key: *const ::std::os::raw::c_char,
    pub session_token: *const ::std::os::raw::c_char,
    pub use_ssl: ::std::os::raw::c_int,
    pub timeout_ms: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_arkilian_s3_config() {
    const UNINIT: ::std::mem::MaybeUninit<arkilian_s3_config> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<arkilian_s3_config>(),
        56usize,
        concat!("Size of: ", stringify!(arkilian_s3_config))
    );
    assert_eq!(
        ::std::mem::align_of::<arkilian_s3_config>(),
        8usize,
        concat!("Alignment of ", stringify!(arkilian_s3_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).endpoint) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(arkilian_s3_config),
            "::",
            stringify!(endpoint)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).region) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(arkilian_s3_config),
            "::",
            stringify!(region)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bucket) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(arkilian_s3_config),
            "::",
            stringify!(bucket)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).access_key_id) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(arkilian_s3_config),
            "::",
            stringify!(access_key_id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).secret_access_key) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(arkilian_s3_config),
            "::",
            stringify!(secret_access_key)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).session_token) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(arkilian_s3_config),
            "::",
            stringify!(session_token)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).use_ssl) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(arkilian_s3_config),
            "::",
            stringify!(use_ssl)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).timeout_ms) as usize - ptr as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(arkilian_s3_config),
            "::",
            stringify!(timeout_ms)
        )
    );
}
extern "C" {
    pub fn db_init(
        db: *mut *mut arkilian,
        connection_url: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_close(db: *mut arkilian);
}
extern "C" {
    pub fn db_errmsg(db: *mut arkilian) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn db_get_handle(db: *mut arkilian) -> *mut sqlite3;
}
extern "C" {
    pub fn db_exec(db: *mut arkilian, sql: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_begin(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_commit(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_rollback(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_changes(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_last_insert_rowid(db: *mut arkilian) -> ::std::os::raw::c_longlong;
}
extern "C" {
    pub fn db_prepare(
        db: *mut arkilian,
        sql: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_use_stmt(db: *mut arkilian, index: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_stmt_count(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_step(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_finalize(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_reset(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_column_count(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_column_name(
        db: *mut arkilian,
        col: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn db_column_type(db: *mut arkilian, col: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_column_text(
        db: *mut arkilian,
        col: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn db_column_int(db: *mut arkilian, col: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_column_int64(
        db: *mut arkilian,
        col: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_longlong;
}
extern "C" {
    pub fn db_column_double(db: *mut arkilian, col: ::std::os::raw::c_int) -> f64;
}
extern "C" {
    pub fn db_column_blob(
        db: *mut arkilian,
        col: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_void;
}
extern "C" {
    pub fn db_column_bytes(db: *mut arkilian, col: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_bind_text(
        db: *mut arkilian,
        idx: ::std::os::raw::c_int,
        val: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_bind_int(
        db: *mut arkilian,
        idx: ::std::os::raw::c_int,
        val: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_bind_int64(
        db: *mut arkilian,
        idx: ::std::os::raw::c_int,
        val: ::std::os::raw::c_longlong,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_bind_double(
        db: *mut arkilian,
        idx: ::std::os::raw::c_int,
        val: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_bind_null(db: *mut arkilian, idx: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_bind_blob(
        db: *mut arkilian,
        idx: ::std::os::raw::c_int,
        val: *const ::std::os::raw::c_void,
        n: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_wal_pending(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_wal_flush(db: *mut arkilian);
}
extern "C" {
    pub fn db_wal_last_sql(db: *mut arkilian) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn db_backup_set_enabled(db: *mut arkilian, enabled: ::std::os::raw::c_int);
}
extern "C" {
    pub fn db_backup_is_enabled(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_resync_triggers(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_set_auto_resync_triggers(db: *mut arkilian, enabled: ::std::os::raw::c_int);
}
extern "C" {
    pub fn db_get_auto_resync_triggers(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_backup_triggers_dirty(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_backup_capture_paused(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_backup_queue_depth(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_backup_oldest_pending_age_sec(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_backup_dead_letter_count(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_backup_thread_heartbeat_age_ms(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_backup_snapshot_heartbeat_age_ms(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_backup_trigger_coverage(db: *mut arkilian) -> f64;
}
extern "C" {
    pub fn db_backup_skipped_table_count(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_backup_chunk_count(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_backup_last_chunk_flush_age_ms(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn db_backup_health_flags(db: *mut arkilian) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn db_backup_is_healthy(db: *mut arkilian) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn arkilian_hydrate_s3(
        local_db_path: *const ::std::os::raw::c_char,
        db_id: *const ::std::os::raw::c_char,
        s3: *const arkilian_s3_config,
        err_buf: *mut ::std::os::raw::c_char,
        err_buf_cap: usize,
    ) -> ::std::os::raw::c_int;
}
